# numericalc

./: .gitignore  CMakeLists.txt  README.md
docs/: doxygen-config.dox
numericalc/: CMakeLists.txt
numericalc-tests/: CMakeLists.txt
numericalc-tests/src/: main.cpp  matrix_test.cpp  poly_test.cpp
numericalc/include/: library.hpp
numericalc/include/numericalc/: Matrix.hpp  Polynomial.hpp
numericalc/include/numericalc/decomposition/: lu.hpp
numericalc/include/numericalc/dft/: dft.hpp  fft.hpp
numericalc/include/numericalc/eigenvector/: power_method.hpp
numericalc/include/numericalc/fft/: fft.hpp
numericalc/include/numericalc/gradient/: conjugate.hpp  steepest_descent.hpp
numericalc/include/numericalc/integration/: newton.hpp
numericalc/include/numericalc/interpolation/: cubic_spline.hpp  lagrange.hpp
numericalc/include/numericalc/norm/: max_norm.hpp  p_norm.hpp
numericalc/include/numericalc/ode/: euler.hpp
numericalc/include/numericalc/root/: newton.hpp
numericalc/include/numericalc/traits/: compare_trait.hpp
numericalc/src/: Matrix.cpp  Polynomial.cpp  library.cpp
numericalc/src/decomposition/: lu.cpp
numericalc/src/dft/: dft.cpp  fft.cpp
numericalc/src/eigenvector/: power_method.cpp
numericalc/src/gradient/: conjugate.cpp  steepest_descent.cpp
numericalc/src/integration/: newton.cpp
numericalc/src/interpolation/: cubic_spline.cpp  lagrange.cpp
numericalc/src/norm/: max_norm.cpp  p_norm.cpp
numericalc/src/ode/: euler.cpp
numericalc/src/root/: root.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
